updated `common` module package config

--- a/common/package.json
+++ b/common/package.json
@@ -1,14 +1,9 @@
 {
   "name": "common",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "A common module for the project",
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
