--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "ShrinkMe Backend",
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0"
+  },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
