--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "ShrinkMe Backend",
+  "main": "src/index.ts",
+  "scripts": {
+    "start": "npx tsc -w",
+    "dev": "nodemon src/index.ts"
+  },
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.18",
