--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.11.18",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.7.0",
@@ -19,6 +20,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   }
