--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.7.0",
     "mongodb": "^4.13.0",
     "nodemon": "^2.0.15",
+    "serve": "^14.2.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.9.4"
   },
