--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "serve": "14.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
