--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   }
