--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "reactstrap": "^9.1.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
